# atomdoc

./: CHANGELOG.md  README.md  pyproject.toml
docs/: SPEC.md
src/atomdoc/: __init__.py  _array.py  _children.py  _descriptors.py  _doc.py  _id.py  _node.py  _operations.py  _protocol.py  _range.py  _session.py  _tier.py  _transaction.py  _transport.py  _types.py  _undo.py  _ws_transport.py
tests/: conftest.py  test_children.py  test_descriptors.py  test_doc_lifecycle.py  test_id.py  test_integration.py  test_node_schema.py  test_operations.py  test_ported_lifecycle.py  test_ported_mutators.py  test_ported_traversal.py  test_protocol.py  test_schema.py  test_serialization.py  test_session.py  test_slots.py  test_tier.py  test_transaction.py  test_tree_ops.py  test_undo.py  test_validation.py
